feat-UNI: System display now has player's ally rank title in player popup (if player in alliance)

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -93,6 +93,7 @@
     игрока на странице "Вселенная"
 [+] Настройки: Отображение логотипов Альянсов и аватаров  игроков  на  странице
     "Вселенная" может быть отключено в настройках игроков
+[+] Вселенная: На попапе игрока отображается его текущее звание в Альянсе
 
 [~] Постройки: Информация о  постройках  кэшируется  при  заходе  на  страницу.
     Ширина таблицы построек устанавливается на максимальную из  возможных.  Это
