--- a/docs/todo.txt
+++ b/docs/todo.txt
@@ -1,15 +1,23 @@
+Tick - новая фишка
+Tack - работа над ошибками
+Toe  - изменение старого кода
+-------------------------------------------------------------------------------
+
+Легкое
+~~~~~~
+[*] Удаление ракет из шахты
 [*] ограничение на количество флотов в сабе
 
-[*] Гипер пространственную для того что бы дейта флот меньше кушал если  движки
-    гиперовские хотябы по 1 %-2 процента это не круто но всеже качать смысл  их
-    уже будет
+[*] Универсальная система бонусов
+  [*] Бонусы на технологиях
+    [*] Гипер пространственную для того что бы дейта флот меньше кушал если  движки
+        гиперовские хотябы по 1 %-2 процента это не круто но всеже качать смысл  их
+        уже будет
+    [*] А вот если бы зделать что напремер за 1 лв колонизации  давали  5  полей  и
+        разницу температур на 1-2 градуса было
 
-[*] А вот если бы зделать что напремер за 1 лв колонизации  давали  5  полей  и
-    разницу температур на 1-2 градуса было
-
-[*] Транзакционность и блокируемость очереди построек!
-
-[*] Резервирование очереди (с особым офицером)
+Наемники
+  [*] Резервирование очереди (с особым офицером)
 
 [*] Пересчет времени строительства  в  очереди  построек  при  найме  офицеров,
     постройке ускоряющих зданий итд
@@ -19,14 +27,9 @@
 [*] Просмотреть все файлы на предмет изменения переменной planet['last_update']
     и добавить вызов функции обновления очереди
 
-[*] а то седня я летал в сабе, я создавал, кидал приглашение, но  не  мог  даже
-посмотреть подсоединился игрок или нет к САБу. Было бы  неплохо  видеть,  а  то
-мало ли что. Сделать для соаловцев и для союзных альянсов
+[*] а то седня я летал в сабе, я создавал, кидал приглашение, но  не  мог  даже посмотреть подсоединился игрок или нет к САБу. Было бы  неплохо  видеть,  а  то мало ли что. Сделать для соаловцев и для союзных альянсов
 
 
-[*] Старая вселенная ogame.triolan.com.ua (далее - ОГ) будет максимально приближен по механике к оригинальному oGame. В частности - будет переписан скорострел, что бы соответствовать оффу. Будут убраны возвраты ресурсов от ракетной атаки. И все такое.
-[*] ОГ и СН будут использовать один и тот же движок. Поэтому ни о каком "прекращении поддержки" ОГ речи НЕ ИДЕТ. ОГ будет поддерживаться наравне с СН. Все исправления багов и оптимизации будут распространятся на обе В. Возможно, что даже кое-какие изменения, не влияющие на баланс, будут перенесены из СН в ОГ.
-[*] Удаление ракет из шахты
 [*] Возможность взрывать свои ракеты в полете
 [*] Ракеты: использовать таблиц флотов
 [*] Cохранение координат во Вселенной при смене активной планеты через дроп-даун лист (сохранение $_POST-запроса?)
@@ -42,10 +45,6 @@
 [*] Пара "Осторожный" - "Рисковый" - будет влиять на рэндом-генератор в бою. Первый - уменьшать разброс параметров, второй - увеличивать.
 [*] Пара "Защитник" - "Нападающий". Первый увеличивает броню за счет атаки, второй - атаку за счет брони. Возможно, будет добавлен третий - "Щитоносец". Назначение очевидно. Тогда уменьшаться будут два показателя, а не один.
 [/list]
-[*]Система офицеров будет переработана[list=1]
-[*] Офицеры будут разделены на Министров (Правителей?), Губернаторов и Наемников
-[*] Министры - аналог старых "офицеров": покупаются один раз и являются постоянными; найм имеет иерархическую структуру. Министры дают всеимперские бонусы, доступ к строительству сверхмощных структур и юнитов. Предварительный список: Командор, Бункер, Разрушитель, Убийца, Император
-[*] Наемники (Менеджеры?). По сути - временные офицеры. Дают всеимперские бонусы. Предварительный список: Шпион, Адмирал, Генерал
 [*] Менеджер "Карго-мастер" (замена Хранителя) - увеличивает емкость трюмов. Возможно - даст возможность выбирать, какие ресурсы загружать первыми. Скорее всего добавит миссию "Забрать", обратную миссии "Транспорт". Флот забирает с планеты-цели указанное количество ресурсов и возвращается на планету-исходник. Сбор ресурсов флотом, если есть разработчики. Слишком много всего - будет скорее всего разбит на двух министров
 [*] Менеджер "Секретарь" - расширяет возможности интерфейса. Добавит заметки на планеты и луны: дата последнего сканирования, персональная заметка (из закладок?)
 [/list]
@@ -57,7 +56,6 @@
 [*] "Федерация" - дает доступ к отдельным данным по Альянсу. Функционал пока под вопросом.
 [/list]
 [*] Новый черный рынок[list=1]
-[*] Автоматическая биржа обмена ресурсов
 [*] Ломбард - можно будет занять ресурсы в долг под проценты. И не дай бог вам не отдать их вовремя!
 [*] Нормальная система обменов ресурсами между игроками с движковой протекцией.
 [/list]
@@ -85,24 +83,17 @@
 [/list]
 
 
-[*] Отрицательные ресурсы при отправке флота со страницы  галактики  -  _errors
-    "Player have negative resources"
-[*] Duplicate Report ID - когда происходит САБ, генерить два рапорта, рассылать
-    всем по списку
+[*] Отрицательные ресурсы при отправке флота со страницы  галактики  -  _errors "Player have negative resources"
+[*] Duplicate Report ID - когда происходит САБ, генерить два рапорта, рассылать всем по списку
 [*] Кэширование чата (XCache). Сброс 10 последних одним инсертом.
 [*] Чат: Интеграция AJAX Chat
-[*]  Админка/Список  ошибок:  добавить  листание  -  PHP  умирает  при  большом
-    количестве ошибок - выдает белую страницу
+[*]  Админка/Список  ошибок:  добавить  листание  -  PHP  умирает  при  большом     количестве ошибок - выдает белую страницу
 [*] Интерфейс: Капча - captcha.php
 [*] Переработать систему оружия и боя: ракеты, кинетическое, энергетическое
-[*] Разобраться в менеджере и подпроцедурах управления флотами, что бы избежать
-    двойных проверок.  Возврат  флотов  должен  производиться  исключительно  в
-    менеджере флотов. Там же так же исключительно должны производиться проверки
-    на то, следует ли передавать флот дальше в подпроцедуры обработки
+[*] Разобраться в менеджере и подпроцедурах управления флотами, что бы избежать    двойных проверок.  Возврат  флотов  должен  производиться  исключительно  в    менеджере флотов. Там же так же исключительно должны производиться проверки    на то, следует ли передавать флот дальше в подпроцедуры обработки
 [*] BE_attackFleetFill.php: Нужна ли полная информация о флотах?
 [*] Интерфейс: позаменять везде 'd/m/Y h:i:s' на прописанное в конфиге
 [*] Не работает константа HIDE_1st_FROM_STATS - должна скрывать юзера 1 (админов?)
-[*] Кэширование чата (XCache). Сброс 10 последних одним инсертом.
 [*] Интерфейс: отдельная таблица для текстовых материалов с поддержкой BBCode
 [*] Интерфейс: credit.php
 [*] Интерфейс: darkmatter.php - templatize!
@@ -111,100 +102,152 @@
 [*] Интерфейс, RPG: Make empire work only with Emperor
 [*] Движок: проверить файлы в каталоге admin  на  наличие  SQL-injection  через глобальные переменные $_POST
 [*] Модульная система
+[*] Перенести таблицу /templates в /design
+[*] Модули миссий и боевого движка
+[*] Добавить в отладчик кэш для логов и ошибок при отключенной БД
+[*] Не работает noipcheck
+[*] Обновлять данные по производству  ресурсов  только  там,  где  это  реально нужно: постройка/удаление  зданий,  найм  офицеров/губернаторов,  изменение производства зданий через меню "Ресурсы". Вроде все
+[*] Обновлять данные по количеству свободных полей на планете только  там,  где это реально нужно: постройка/удаление зданий. В перспективе - колонизация
+[*] Добавить в очередь  настройку  BUILD_DELAY  -  вычет  ресурсов  только  при активизации строений
+[*] Сохранять в таблицу пользователей количество активных флотов и экспедиций
+[*] Отдельное здание+очередь для постройки обороны
+[*] Поменять все статусы fleet_mess на константы на случай добавления статусов.    Соответственно изменить все проверки
+[*] Переделать систему расчета рапортов: добавить в  таблицу  уникальный  ИД  и возвращать ссылку на хэш И на ИД, что бы избежать дубликатов. Да  и  вообще переделать в отдельную таблицу
+[*] Шпионаж и атака шпионскими зондами не попадают под действие правила о башинге
+[*] Комбинированные флоты (те, в состав которых входят не только шпионы)  также можно отсылать с заданием шпионаж. В случае обнаружения такого флота, он  в полном составе вступает в бой.
+[!] Модули - обработчики миссии. Обработчик принимает параметры, изменяет структуры и возвращает данные обработчику, который уже вносит  изменения  в БД.  Среди  параметров  -  ИД  мисси,  тип  точки  назначения,  должна   ли существовать итд
+[+] Миссия "Диверсия": взорвать часть защиты противника
+[+] Миссия "Саботаж": отключить производство на планете :)
+[+] Миссия "Украсть": забрать ресурсы с планеты
+[*] Новый интерфейс покупки офицеров
+[*] Новый интерфейс исследований
+[*] Новый интерфейс верфи
+[+] Штурмовик. Поставить в пререквисты 5 уровней Конструктора
+[*] Переписать боевой движок
+[*] Переделать в использование кэша боевые миссии
+[*] Перекинуть ракеты в таблицу флотов
+[*] Добавить поля fleet_start_id и fleet_end_id - ID соответствующих планет
+[*] Заставить миссии возвращать измененные результаты
+[*] Разный Браузер - разный цвет http://forum.supernova.ws/viewtopic.php?f=65&t=1524
+[*] Переформатировать readme.txt в html
+[*] Биржа обмена ресурсов между игроками
+[*] Админка: Добавить настройки системы очистки
+[*] Сделать update.php исполняемым только от админа
+[*] Добавить глобальную оповещалку об атаке в навбар
+[*] Переписать флот-кэшер, что бы  он  избирательно  кэшировал  планеты/игроков
+[*] Динамическая подстройка дискретизации под загрузку mysql сервера     Innodb_row_lock_time_avg. Настройка таймаута проверки
+[*] Для новых планет не включается админская защита проверять по ИД юзера
+[*] Попробовать заставить flt_get_fleets_to_planet использовать только кэши
+[*] Таблица рекордов
+[*] Антифриз: "Заморозка" сервера. Сохраняется время последнего  обновления.  И
+    если сервер падает на больше чем freeze_timeout,  то  все  времена  сервера
+    прибавляются на время запуска. После реализации очереди.
+
+    Осторожно с антифризом! Что бы он не принимал за фризы пустой сервер!
+
+    user[vacation]
+    user[banaday]
+    user[deltime]
+    planets[last_update]
+    planets[b_tech]
+    planets[last_jump_time]
+    iraks[zeit] Время
+    fleet[fleet_start_time]
+    fleet[fleet_end_time]
+    fleet[fleet_end_stay]
+    fleet[start_time]
+    confirmations[create_time]
+    config(?)
+    banned[longer]
+    alliance_requests[request_time]
+    aks[fleet_end_time]
+    aks[ankunft] (?) Прибытие
+[~] Изменить PlanetesourceUpdate что бы она не блокировала хозяина  планеты  по    любой выборке планеты. И тогда переписать  кэшер  летящих  флотов,  что  бы    отдельно кэшировать планеты и отдельно - пользователей
+[~] ЧР: Обмен ресурсов завернут в транзакцию. Сделать то же для кораблей
+[~] Оптимизировать уход в отпуск - можно  одним  запросом  сразу  выбирать  FOR    UPDATE, обновлять планеты, проверять на условие ухода в отпуск и отпадать    если фигня. А потом кэшированное по запросам пойти.
+[~] Отпуск - добавить имя планеты
+[*] После обработки очереди надо пересчитывать показатели производительности  и    размеры складов!
+[*] При удержании свой флот в бою участвовать не должен!
+[*] Разобраться с dpath
+[*] Запихнуть все иконки в один файл
+[*] Переделать все запросы на получение параметров из стандартных процедур
+[*] Заменить tw_sack на jQuery
+[*] Сделать планету перманентной в пределе страницы через ?cp=
+[*]  Было  бы  очень  удобно   видеть   рядом   с   базовыми   характеристиками кореблей/сооружений еще  и  характеристики  текущие  (с  приминением  всех улучшений/исследований, офицеров и т.д.)
+s[*] Сделать своз ресурсов интерактивным
+[*] Перенести таймер текущей постройки на саму картинку
+[*] Считать поля планеты один раз
+[*] Долго открываются сообщения - посмотреть почему - сделать автоочистку сообщений    при переполнении ящика
+[*] update_micro.php - для мелких апдейтов на моих серверах
+[*] Локализация текста и названия квеста
+[*] Квесты - срок действия (от и до)
+[*] Таблица аккумуляторов (всего убито ЛИ)
+13.2.3. Объявление войны является  односторонним  и  не  требует  обязательного согласия всех сторон. Для ведения войны альянс должен  иметь  как  минимум  2-х членов.
+13.2.4. Запрещено объявлять войну более чем 5-ти альянсам. т.е. - если  вы  уже ведёте боевые действия с 5-ю альянсами, вы НЕ можете объявлять  о  новой  войне кому-либо, НО это не отменяет права другому альянсу объявить войну вам.
+13.2.5. Оскорбление. Оскорблённый (см. п.8.2) вправе атаковать оскорбившего его игрока сколько угодно раз с начала и до окончания блока за оскорбление.
+13.2.6. Особый случай. Атаки, делающие невозможным  для  атакуемого  дальнейший ход игры, запрещены. Точное описание такого случая невозможно, т.к. оно зависит от многих специфических факторов каждого  игрока,  поэтому  определение  такого случая оставляется оператору.
+[*] Оповещение в личку о предложении другого Альянса
+[*] Оповещение на главную страницу Альянса о новых предложениях
+[*] Ограничение на количество одновременных войн
+[*] Ограничение на количество игроков в альянсе,  который  может/которому  можно    объявить войну
+[*] Право "Дипломат" на заключение пактов от имени Альянса
+[*] Подсказки
+[*] Более "человеческие" сообщения от системы Дипломатии
+[*] История отношений
+[*] Фонд Альянса
+    [*] Контрибуция
+[*] Погоны - картинки/иконки к званиям
+[*] Медальки - медальки игрокам альянса
+[*] Права на доступ в чат/Права на блокировку в чате
+[*] Друзья: Переписать нахрен!
+[*] Подсказки: Вынести в футер/display
+[*] Переименовать все "mnl_" в "msg_", а в БД - засунуть в одно поле (?)
+[*] Случайные события
+    [*] На орбите одной из планет появляется куча лома
+[*] Конденсаторы. Сделать  энегрию  накапливаемым  ресурсом,  которая  живет  в конденсаторах
+[*] Временный офицер, уменьшающий стоимость всех операций с ТМ на Х ТМ :)
+[*] Динамический курс ТМ - настройка
+[*] Масштабирование наград/условий - настройка
+[*] Перенести список юнитов/технологий в отдельную таблицу
 
 
-Ссылки
-======
-[*] JWChat - jabber web chat
-    http://www.cgitop.com/2008/02/22/jwchat-jabber-web-chat.html
-[*] PHP - Оптимизация и отладка
-    http://phplens.com/lens/php-book/optimizing-debugging-php.php
-[*] Фильтры - компрессия
-    http://php.net/manual/en/filters.compression.php
-[*] Использовать авторизацию phpBB3
-    http://wiki.phpbb.com/display/DEV/Authentication+plugins
-[*] Использовать интеграцию таблиц phpBB3
-    http://www.phpbb.com/community/viewtopic.php?f=71&t=993475
-[*] Использовать кодепарсер phpBB3
-    http://www.phpbb.com/community/viewtopic.php?f=71&t=614444&start=30
-[*] using phpBB3 for everything (^_^) - custom page
-    http://www.phpbb.com/kb/article/add-a-new-custom-page-to-phpbb/
-    looks like updated version of upper page:
-    http://wiki.phpbb.com/display/MODDOCS/Practical.Add+custom+page
-[*] Использовать датабазе абстрактион лаер
-    phpbb
-    http://wiki.phpbb.com/display/DEV/Database+Abstraction+Layer
-    php 5.0+ embedded Database Object
-    http://ua2.php.net/manual/en/pdo.connections.php
-[*] Траффик-анализер на ПХП
-    http://soft.zoneo.net/phpTrafficA/use.php?l=ru
-[*] xdebug
-    http://xdebug.org/index.php
-
-
-Многие системы используют базу данных для хранения паролей и существует несколько способов для хранения паролей.
-Пароли хранятся как есть. При взломе такой базы все пароли станут известны.
-Хранятся только хеши паролей (с помощью MD5, SHA). Найти пароли можно только полным перебором. Но при условии использования несложного, популярного или просто несчастливого пароля (который встречался ранее и занесён в таблицу) такая задача решается за доли секунды. Пароль из таблицы был найден всего за 0,036059 сек.[12]
-Хранятся хеши паролей и несколько случайных символов. К каждому паролю добавляется несколько случайных символов (их ещё называют «salt» или «соль») и результат ещё раз хешируется. Например, md5(md5(pass)+word). Найти пароль с помощью таблиц таким методом не получится.
-Пример базы данныхспособ        id      login   password
-1       5       anton   mydata
-2       5       anton   md5(mydata)
-3       5       anton   md5(md5(mydata)+word) и word
 
 
 
-procedure PROCESS_TRANS(p_account_id in number,
-                         p_operator_id in number,
-                         p_sum         in number,
-                         o_result     out number) is
 
-    l_cnt  number;
 
-    cursor cur_account is
-     select id
-        from pay_account
-      where id = p_account_id
-         for update of balance;
+[*] Настройки подсистемы реферралов
+[*] Убрать из js (в частности - universe.js) все форматирование. Перенести их в темплейты
+ Облегченная версия для мобильных телефонов и, возможно, WAP-версия. А, чем черт не шутит? Может быть даже отдельные приложения для iPhone, WM и Андроид!
+ Система перков - возможно, в сочетании с системой рас
+ Расширенная дипломатия. Новые отношения между Альянсами. Более жесткие ограничение на объявления войн (настраиваемые)
+ Поддержка XMPP (Jabber) в чате
+ Принципиально новые типы кораблей: авианосец, минер, стелс
+ Конструктор кораблей
+ Орбитальные базы
+ UBEv4. Обновленный и оптимизированный боевоей движок с делением оружия на типы (см. соответствующие документы)
+ Новый тип ресурса - "население". С пристяжкой - дополнительный тип оружия и, может быть, возможность захвата планет
+ Новые и усовершенствованные постройки. Банк: займ под залог и "банковская ячейка". Оборона: отделение строительство обороны от верфи в отдельное здание. Склад Альянса - обновление алгоритма работы. ТЭС: ребалансировка
+ Расширение параметров планет. Новый параметр - "плотность", влияющий на добычу металла и дейтрия. Динамический температурный диапазон (а не фиксированный, как сейчас). Корректная работа системы генерации планет при количестве планет >15 в системе
+   [*] Плотность планет. В зависимости от плотности изменяется структура добычи
+ Обновление системы исследований. Исследования будут вынесены с планет на Империю. Новые виды исследований. Дополнительные бонусы от исследований - больше не будет "бесполезных" исследований!
+ Обновление системы экспедиций. Длительность экспедиции будет влиять на результат
+   [*] Экспедиции - при сдергивании флота из экспы все равно  проводится  ролл  на событие от количества проведенных часов с округлением в меньшую  сторону  - что бы не сейвили флоты
+ Обновление системы артефактов. Новые артефакты с неожиданными эффектами
+ Боты
+ Поддержка мультисерверов. Единый аккаунт для нескольких серверов на одном домене, общий чат, возможно - общая почта
+ Гейт в phpBB3. Единый логин для игры и форума. Динамическая связь между игрой и форумом
+ Унификация интерфейса создания юнитов
+ Админам. Обновленный апдейтер. Практика обновлений на стороне пользователей зарекомендовала себя... не очень. Плохо зарекомендовала - если быть совсем точным. Поэтому система обновлений будет вынесена в админку
+ Админам. Апгрейд с хНова. На самом деле то, с чего следовало начать. Надеюсь, что в новом году несчастные пользователи глючной хНова смогут приникнуть к живительному ручью СН. Одновременно в апдйтере будет отключена поддержка версий СН по 30ю. И вправду - зачем тянуть длинный, ненужный хвост?
+ Админам. Тикер обновлений. По примеру phpBB3 в СН будет встроен механизм проверки текущей версии и, возможно, система автоматического обновления. Это поможет админам оперативно латать возможные дырки в СН
+ Админам. Система багрепортов. А эта система позволит централизованно собирать сообщения об ошибках для скорейшего реагирования
+ И - еще немного радости для админов - встроенная система платежей через WM: пожертвование и покупка ТМ
+ Девелоперам. Модульная система. Система плагинов позволит неограниченно (в пределах модльной системы) расширять игру
+ И традиционно - дальнейшая оптимизация движка и добавление новых фич
+[*] Глобальные уведомления об атака - в навбаре
+[*] Заменить eco_can_build_unit() на eco_get_build_data()
 
-    cursor cur_operator is
-     select id
-        from pay_operator
-      where id = p_operator_id
-         and total >= p_sum
-         for update of total;
-
-begin
-  o_result := -1;  -- tansaction begins
-
-  -- if such operator exist?
-  select count(1) into l_cnt from pay_operator opr where opr.id = p_operator_id;
-
-  if (l_cnt != 1) then
-    o_result := -2; -- Operator not found!
-    return;
-  end if;
-
-  open cur_account;
-  open cur_operator;
-
-  fetch cur_account into l_cnt; -- need to fetch to update rows later
-  fetch cur_operator into l_cnt; -- 0/1 row in cursor as selected by prim_key
-
-  if cur_account%notfound then
-    o_result := -3; -- Account not found!
-  elsif cur_operator%notfound then
-    o_result := -4; -- Operator has not enough money
-  else
-
-    update pay_account set balance = (balance + p_sum) where current of cur_account;
-    update pay_operator set total = (total - p_sum) where current of cur_operator;
-
-    insert into pay_transaction (id, account_id, operator_id, money, datetime)
-      values (pay_transaction_seq.nextval, p_account_id, p_operator_id, p_sum, sysdate );
-    commit;
-    o_result := 1;    -- transaction successfully finished!
-  end if;
-
-  close cur_account;
-  close cur_operator;
-end;
+[*] Сканирование Вселенной за деньги
+[*] Обработка false от rpg_points - вышибать с ошибкой транзакции
+[*] Биржа: биржа, рулетка, покер, садик
