feat-ECO+QST-33a9: Now quest can has as reward all 4 resources at once. Also on resource trader now possible to buy all 3 type of planet resources for DM at one operation

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -9,7 +9,7 @@
  [@] Эта информация будет интересна только админам и/или разработчикам
  [*] ToDo - см. changelog.todo
 
-Текущая версия 33a8
+Текущая версия 33a9
 -------------------
 
 [!] Наемники: Добавлена поддержка временных Наемников  (ВН).  Осталась  так  же
@@ -94,6 +94,13 @@
 [+] Настройки: Отображение логотипов Альянсов и аватаров  игроков  на  странице
     "Вселенная" может быть отключено в настройках игроков
 [+] Вселенная: На попапе игрока отображается его текущее звание в Альянсе
+[+] ЧР/Торговец ресурсами: Теперь  можно  поменять  ТМ  сразу  на  все  ресурсы
+    (опция "Все ресурсы" в дропдауне выбора ресурсов). При этом вводимая  сумма
+    будет разделена на три части и на  каждую  из  этих  третей  будет  куплено
+    соответствующее количество ресурсов по курсу. Стоимость такой операции -  в
+    три раза больше базовой стоимость обмена
+[+] Квесты: Теперь в награду за исполнение квеста можно одновременно ставить до
+    четырех видов ресурсов
 
 [~] Постройки: Информация о  постройках  кэшируется  при  заходе  на  страницу.
     Ширина таблицы построек устанавливается на максимальную из  возможных.  Это
