misc-JS-33a10: Added jQueryUI styles overriding with local skin ones. Updated jQuery and jQueryUI to newest versions

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -9,8 +9,8 @@
  [@] Эта информация будет интересна только админам и/или разработчикам
  [*] ToDo - см. changelog.todo
 
-Текущая версия 33a9
--------------------
+Текущая версия 33a10
+--------------------
 
 [!] Наемники: Добавлена поддержка временных Наемников  (ВН).  Осталась  так  же
     поддержка постоянных Наемников (ПН). Тип Наемников выбирается в  настройках
@@ -101,6 +101,11 @@
     три раза больше базовой стоимость обмена
 [+] Квесты: Теперь в награду за исполнение квеста можно одновременно ставить до
     четырех видов ресурсов
+[+] Скины: Добавлена возможность перекрыть дефолтные стили  элементов  jQueryUI
+    (файл /design/css/jquery.css) стилями, специфическими для скина. Для  этого
+    в корневой каталог скина  нужно  положить  файл  jquerу.css  с  настройками
+    стилей элемента. Сгенерировать файл под свою тему можно на сайте jQuery  по
+    ссылке: http://jqueryui.com/themeroller/
 
 [~] Постройки: Информация о  постройках  кэшируется  при  заходе  на  страницу.
     Ширина таблицы построек устанавливается на максимальную из  возможных.  Это
@@ -115,6 +120,7 @@
     дейтрию, т.е. постройки с большей долей  низкоуровневых  ресурсов  строятся
     быстрее
 [~] Админка: Добавлены label for для всех чекбоксов
+[~] Скины: EpicBlue имеет собственное оформление элементов jQueryUI
 
 [%] Партнерка: Исправлено отображения количества начисленных ТМ
 
@@ -127,6 +133,7 @@
 [@] Пол: В скины добавлена иконка пола в подкаталог "images" скина.  Файлы  для
     мужского  и  женского  пола  называются  соответственно  "sex_male.png"   и
     "sex_female.png". Встроенные скины обновлены автоматически
+[@] JS: Обновлен jQuery до версии 1.7.1. Обновлен jQuery-UI до версии 1.8.17
 
 
 Project "SuperNova.WS" Release 32 "Happy New Year v2012!"
