feat-INT-33a11: Vertical structures que

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -9,7 +9,7 @@
  [@] Эта информация будет интересна только админам и/или разработчикам
  [*] ToDo - см. changelog.todo
 
-Текущая версия 33a10
+Текущая версия 33a11
 --------------------
 
 [!] Наемники: Добавлена поддержка временных Наемников  (ВН).  Осталась  так  же
@@ -106,6 +106,8 @@
     в корневой каталог скина  нужно  положить  файл  jquerу.css  с  настройками
     стилей элемента. Сгенерировать файл под свою тему можно на сайте jQuery  по
     ссылке: http://jqueryui.com/themeroller/
+[+]  Постройки:  Вертикальная  очередь  построек.   Включается   в   настройках
+    пользователя в секции "Настройки интерфейса"
 
 [~] Постройки: Информация о  постройках  кэшируется  при  заходе  на  страницу.
     Ширина таблицы построек устанавливается на максимальную из  возможных.  Это
@@ -121,6 +123,8 @@
     быстрее
 [~] Админка: Добавлены label for для всех чекбоксов
 [~] Скины: EpicBlue имеет собственное оформление элементов jQueryUI
+[~] Вселенная: При создании новой планеты из имени планеты  исключен  знак  "№"
+    для более корректной работы функций PHP
 
 [%] Партнерка: Исправлено отображения количества начисленных ТМ
 
@@ -134,6 +138,10 @@
     мужского  и  женского  пола  называются  соответственно  "sex_male.png"   и
     "sex_female.png". Встроенные скины обновлены автоматически
 [@] JS: Обновлен jQuery до версии 1.7.1. Обновлен jQuery-UI до версии 1.8.17
+[@] Строительство: Файлы с функциями строительства  зданий/исследований/обороны
+    перенесены в каталог /includes/includes и теперь  подключаются  только  при
+    вызове соответствующих страниц. Это  позволило  заметно  сократить  размеры
+    кода в памяти сервера
 
 
 Project "SuperNova.WS" Release 32 "Happy New Year v2012!"
