feat-MOD-33a12: Basic module functionality - function dynamic wrapping

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -9,7 +9,7 @@
  [@] Эта информация будет интересна только админам и/или разработчикам
  [*] ToDo - см. changelog.todo
 
-Текущая версия 33a11
+Текущая версия 33a12
 --------------------
 
 [!] Наемники: Добавлена поддержка временных Наемников  (ВН).  Осталась  так  же
@@ -88,6 +88,9 @@
     ТМ. Таким образом более высокая цена именования  галактики  или  системы  в
     определенной степени защищает объект от переименования
     7. Как было сказано в п.2, имя галактики и системы видны всем игрокам
+[!] Модульность: Базовая  поддержка  модульности  -  динамически  перекрываемые
+    функции. Подробное описание по использованию динамического перекытия см.  в
+    разделе "Модульная система" файла /docs/readme.txt
 
 [+] Пол: Добавлено отображение пола игрока на странице "Император" и  в  попапе
     игрока на странице "Вселенная"
@@ -127,6 +130,10 @@
     для более корректной работы функций PHP
 
 [%] Партнерка: Исправлено отображения количества начисленных ТМ
+[%] Наемники:  Исправлена  ошибка  начисления  процентных  бонусов:  в  случаях
+    многократных бонусов происходило  начисление  бонуса  на  бонус,  а  не  на
+    базовое значение. Это приводило к получению завышенных бонусов  -  например,
+    на Адмирале и Навигаторе
 
 [@] $sn_data['groups']['prod'] => $sn_data['groups']['factories']
 [@] Аватары: Для корректной  работы  подсистемы  аватаров  в  PHP  должен  быть
@@ -142,6 +149,8 @@
     перенесены в каталог /includes/includes и теперь  подключаются  только  при
     вызове соответствующих страниц. Это  позволило  заметно  сократить  размеры
     кода в памяти сервера
+[@] Статистика: файл с функциями  статистики  /functions/sys_stat_functions.php
+    перемещен в /includes/includes/sys_stat.php
 
 
 Project "SuperNova.WS" Release 32 "Happy New Year v2012!"
