misc-SYS: Misc changes in debug&error reporting - debugging facility now can be switched on with one constant. Doc editing

--- a/docs/install.txt
+++ b/docs/install.txt
@@ -79,7 +79,11 @@ CentOS + lighttpd + XCache.
 ВСТРОЕННЫЕ ФАЙЛЫ! Последующие изменения в репозитории могут  перезаписать  ваши
 дополнения! Сделайте копию скина/темплейта/локализации под другим именем и  уже
 с копией веселитесь. Изменить скин/темплейт/локализацию по умолчанию  можно  на
-странице конфигурации сервера.
+странице конфигурации сервера
+Если вы используете собственные модификации кода НЕ ИЗМЕНЯЙТЕ ВСТРОЕННЫЕ  ФАЙЛЫ
+по тем же причинам! В  СН  есть  механизм  динамической  перегрузки  функций  -
+используйте его для модификации кода.  Подробнее  о  данном  функционале  можно
+прочесть в файле /docs/readme.txt - раздел "Динамическое перекрытие функций"
 
 
 Инсталляция, настройки БД
@@ -245,6 +249,19 @@ url.rewrite-once = (
 стандартная процедура обновления прошла неуспешно! Если  и  это  не  помогло  -
 следует перейти к Диагностиек неисправностей
 
+
+"Белый экран"
+=============
+Очень часты жалобы следующего вида: "Я скачал и поставил движок, а при загрузке
+страницы в браузере только белый экран!". Данная  неисправность  в  большинстве
+случаев означает, что есть какая-то проблема,  но  в  настройках  PHP  отключен
+вывод ошибок. Для диагностики такого рода  проблем  необходимо  включить  вывод
+ошибок. Сделать это можно в настройках PHP,  в  .htaccess  или  в  движке.  Что
+бы включить вывод ошибок в движке,  нужно  в  файле  /includes/init.php  второй
+строкой вписать:
+  define('BE_DEBUG', true);
+
+
 Диагностика неисправностей движка
 =================================
 Самую свежую и актуальную версию движка (с самыми свежими и актуальными багами)
@@ -283,6 +300,7 @@ https://github.com/supernova-ws/SuperNova/archives/trunk
 могут использоваться старые настройки от предыдущей версии.
 Только верное и аккуратное следование процедуре диагностики поможет  эффективно
 выявить проблемы в работе СН на каждом отдельно взятом сервере.
+
 
 Ссылки
 ======
