feat-MRC-33a13: Temporary mercenary now can be dismiss - with loosing all spent DM

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -9,7 +9,7 @@
  [@] Эта информация будет интересна только админам и/или разработчикам
  [*] ToDo - см. changelog.todo
 
-Текущая версия 33a12
+Текущая версия 33a13
 --------------------
 
 [!] Наемники: Добавлена поддержка временных Наемников  (ВН).  Осталась  так  же
@@ -30,8 +30,8 @@
     наценки, ни скидки и при пересчете на количество секунд в БПН его стоимость
     будет в точности равна стоимости БПН.  Если  число  меньше  единицы  -  это
     означает скидку; больше единицы - наценку
-    5.  После  рекрутирования  Наемника  невозможно  изменить  его  уровень  до
-    окончания срока действия найма
+    5. Временного наемника можно увольнять до истечения срока найма.  ВНИМАНИЕ!
+    При увольнении наемников вся портаченная на найм ТМ будет утеряна!
     6. Режим Наемников отображается на странице "Мировые константы"
     При переключении режима Наемников следует учитывать следующие особенности:
     1.  При  включении  ВН  все  постоянные  Наемники  будут  преобразованы  во
@@ -128,6 +128,8 @@
 [~] Скины: EpicBlue имеет собственное оформление элементов jQueryUI
 [~] Вселенная: При создании новой планеты из имени планеты  исключен  знак  "№"
     для более корректной работы функций PHP
+[~]  Альянсы:  Количество  игроков  в  Альянсе  теперь  изменяется  сразу   при
+     изменении, а не при апдейте статистики/обслуживании сервера
 
 [%] Партнерка: Исправлено отображения количества начисленных ТМ
 [%] Наемники:  Исправлена  ошибка  начисления  процентных  бонусов:  в  случаях
@@ -151,6 +153,8 @@
     кода в памяти сервера
 [@] Статистика: файл с функциями  статистики  /functions/sys_stat_functions.php
     перемещен в /includes/includes/sys_stat.php
+[@] Локализация: Все строки локализации, относящиеся к  наемникам,  вынесены  в
+    файл mrc_mercenary.mo
 
 
 Project "SuperNova.WS" Release 32 "Happy New Year v2012!"
