feat-MRC-33a14: Paid module - Alliance's mercenaries

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -9,8 +9,36 @@
  [@] Эта информация будет интересна только админам и/или разработчикам
  [*] ToDo - см. changelog.todo
 
-Текущая версия 33a13
+Текущая версия 33a14
 --------------------
+
+[$] Альянсы: Альянсы теперь могут покупать Наемников!
+    1. Каждый Альянс имеет собственный счет ТМ
+    2. Член Альянса может перевести ТМ на счет Альянса
+    3. Владелец Альянса может покупать Наемников со счета Альянса
+    4. После достижения минимально необходимого количества (по умолчанию -  10,
+       задается в таблице `config`  записью  'ali_members_bonus')  каждый  член
+       Альянса получает бонус к своим Наемникам, равный уровню Наемника Альянса
+       деленного на количество членов Альянса, математически округленный
+    Примеры:
+    1. Альянс из 10 человек купил Наемника 4 уровня.
+        Бонус = round(10/4) = round(0,4) = 0
+    2. Альянс из 10 человек купил Наемника 7 уровня
+        Бонус = round(10/7) = round(0,7) = 1
+    Данный подход призван обеспечить достижение сразу нескольких целей:
+    1. Исключить злоупотребление фишкой,  когда  2-3  игрока  формируют  Альянс
+    исключительно для получения бонусов
+    2. Активизировать межальянсную активность - чем больше игроков, тем  больше
+    ТМ
+    3. Усилить значение лояльности Альянсу - при выходе (или выгоне) из Альянса
+    игрок теряет все бонусы и, самое неприятное - все пожертвованные  в  Альянс
+    ТМ
+    4. Исключить появление мегаальянсов - чем  больше  игроков,  тем,  конешно,
+    больше ТМ они могут пожертвовать - но тем  меньше  бонусов  получит  каждый
+    отдельный игрок
+    5. Слабые игроки в сильных  Альянсах  получают  доступ  к  end-game  юнитам
+    (если,  конечно,  глава  Альянса  решит  потратить  ТМ  на  соответствующих
+    Наемников)
 
 [!] Наемники: Добавлена поддержка временных Наемников  (ВН).  Осталась  так  же
     поддержка постоянных Наемников (ПН). Тип Наемников выбирается в  настройках
@@ -128,8 +156,13 @@
 [~] Скины: EpicBlue имеет собственное оформление элементов jQueryUI
 [~] Вселенная: При создании новой планеты из имени планеты  исключен  знак  "№"
     для более корректной работы функций PHP
-[~]  Альянсы:  Количество  игроков  в  Альянсе  теперь  изменяется  сразу   при
-     изменении, а не при апдейте статистики/обслуживании сервера
+[~] Альянсы:  Количество  игроков  в  Альянсе  теперь   изменяется  сразу   при
+    изменении, а не при апдейте статистики/обслуживании сервера
+[~] Альянсы: Теперь список членов Альянса распознает права просматривающего без
+    захода в админскую  часть,  поэтому  из  админки  убран  пункт  "Управление
+    участниками"
+[~] Наемники:   При  найме  постоянных  наемников  показывается  ровно  столько
+    уровней, на сколько хватает ТМ
 
 [%] Партнерка: Исправлено отображения количества начисленных ТМ
 [%] Наемники:  Исправлена  ошибка  начисления  процентных  бонусов:  в  случаях
