--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -7,6 +7,7 @@
  [#] Интерфейсные усовершенствования
  [%] Исправление - багфикс
  [@] Эта информация будет интересна только админам и/или разработчикам
+ [$] Платный модуль, не входящий в публичную версию
  [*] ToDo - см. changelog.todo
 
 Текущая версия 33a14
