doc: changelog editing

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -10,7 +10,7 @@
  [$] Платный модуль, не входящий в публичную версию
  [*] ToDo - см. changelog.todo
 
-Текущая версия 33a14
+Текущая версия 33a15
 --------------------
 
 [$] Альянсы: Альянсы теперь могут покупать Наемников!
@@ -164,12 +164,15 @@
     участниками"
 [~] Наемники:   При  найме  постоянных  наемников  показывается  ровно  столько
     уровней, на сколько хватает ТМ
+[~] Альянсы: Изменено отображение логотипа на странице Альянса
 
 [%] Партнерка: Исправлено отображения количества начисленных ТМ
 [%] Наемники:  Исправлена  ошибка  начисления  процентных  бонусов:  в  случаях
     многократных бонусов происходило  начисление  бонуса  на  бонус,  а  не  на
     базовое значение. Это приводило к получению завышенных бонусов  -  например,
     на Адмирале и Навигаторе
+[%] Альянсы: Исправлена ошибка при отправке письма группам Альянса
+[%] Альянсы: Исправлена ошибка с неправильным отображением звания главы Альянса
 
 [@] $sn_data['groups']['prod'] => $sn_data['groups']['factories']
 [@] Аватары: Для корректной  работы  подсистемы  аватаров  в  PHP  должен  быть
