misc-ECO-33a15.2: Removed pass-by-reference

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -10,8 +10,8 @@
  [$] Платный модуль, не входящий в публичную версию
  [*] ToDo - см. changelog.todo
 
-Текущая версия 33a15
---------------------
+Текущая версия 33a15.1
+----------------------
 
 [$] Альянсы: Альянсы теперь могут покупать Наемников!
     1. Каждый Альянс имеет собственный счет ТМ
@@ -173,6 +173,8 @@
     на Адмирале и Навигаторе
 [%] Альянсы: Исправлена ошибка при отправке письма группам Альянса
 [%] Альянсы: Исправлена ошибка с неправильным отображением звания главы Альянса
+[%] Регистрация: Исправлена ошибка, когда игрок мог создать  аккаунт/планету  с
+    пробелами в начале/в конце
 
 [@] $sn_data['groups']['prod'] => $sn_data['groups']['factories']
 [@] Аватары: Для корректной  работы  подсистемы  аватаров  в  PHP  должен  быть
@@ -195,7 +197,7 @@
 
 
 Project "SuperNova.WS" Release 32 "Happy New Year v2012!"
-============================================================
+=========================================================
 
 [!] Исправлена работа с большими числами:
       Все числовые значение в HTTP-запросах трактуются как  числа  с  плавающей
