--- a/docs/install.txt
+++ b/docs/install.txt
@@ -37,7 +37,7 @@ PHP & XCache & веб-серверов! Это означает,  что  при  некоторых  комбинациях  и
 Требования
 ==========
 MySQL 5.x - режим STRICT_TRANS_TABLES должен быть ОТКЛЮЧЕН
-PHP >= 5.2.х
+PHP >= 5.2.х - НЕ СОВМЕСТИМ С PHP 5.3.1!
 Web-server
 XCache >= 1.2.х - опционально, но крайне, крайне желательно.  Без  XCache  не
                   будут работать некоторые фишки и заметно возрастет нагрузка
