--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -10,14 +10,16 @@
  [$] Платный модуль, не входящий в публичную версию
  [*] ToDo - см. changelog.todo
 
-Текущая версия 33a15.1
-----------------------
+Текущая версия 33a16
+--------------------
 
 [$] Альянсы: Альянсы теперь могут покупать Наемников!
     1. Каждый Альянс имеет собственный счет ТМ
     2. Член Альянса может перевести ТМ на счет Альянса
-    3. Владелец Альянса может покупать Наемников со счета Альянса
-    4. После достижения минимально необходимого количества (по умолчанию -  10,
+    3. ТМ со счета Альянса могут расходоваться только на нужды Альянса.  Нельзя
+       переводить ТМ на счет игрока
+    4. Владелец Альянса может покупать Наемников со счета Альянса
+    5. После достижения минимально необходимого количества (по умолчанию -  10,
        задается в таблице `config`  записью  'ali_members_bonus')  каждый  член
        Альянса получает бонус к своим Наемникам, равный уровню Наемника Альянса
        деленного на количество членов Альянса, математически округленный
@@ -120,6 +122,14 @@
 [!] Модульность: Базовая  поддержка  модульности  -  динамически  перекрываемые
     функции. Подробное описание по использованию динамического перекытия см.  в
     разделе "Модульная система" файла /docs/readme.txt
+[!] Исследования: Очередь исследований перенесена с планет на пользователя
+    1. Исследования теперь могут производится даже на планетах  со  строящимися
+       лабораториями/нанолабораториями
+    2.  В  случае  отсутствия  МИС  для  проведения   исследования   выбирается
+       лаборатория  с  максимальным  эффективным   уровнем   (т.е.   с   учетом
+       нанолабораторий)
+    При апдейте все идущие исследования  будут  перенесены  в  пользовательскую
+    очередь
 
 [+] Пол: Добавлено отображение пола игрока на странице "Император" и  в  попапе
     игрока на странице "Вселенная"
@@ -140,6 +150,9 @@
     ссылке: http://jqueryui.com/themeroller/
 [+]  Постройки:  Вертикальная  очередь  построек.   Включается   в   настройках
     пользователя в секции "Настройки интерфейса"
+[+] Исследования: Добавлены подробные  сообщения  об  ошибке  в  случае,  когда
+    технология не может быть исследована (нехватка ресурсов,  неудовлетворенные
+    требования итд)
 
 [~] Постройки: Информация о  постройках  кэшируется  при  заходе  на  страницу.
     Ширина таблицы построек устанавливается на максимальную из  возможных.  Это
@@ -194,6 +207,9 @@
     перемещен в /includes/includes/sys_stat.php
 [@] Локализация: Все строки локализации, относящиеся к  наемникам,  вынесены  в
     файл mrc_mercenary.mo
+[@] Исследования: Исследования теперь завернуты в  транзакции  -  это  позволит
+    избежать  злоупотреблений  связанных  с  частым  обновлением  страницы   на
+    медленных соединениях
 
 
 Project "SuperNova.WS" Release 32 "Happy New Year v2012!"
