--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -7,41 +7,65 @@
  [#] Интерфейсные усовершенствования
  [%] Исправление - багфикс
  [@] Эта информация будет интересна только админам и/или разработчикам
- [$] Платный модуль, не входящий в публичную версию
+ [$] Модуль, не входящий в публичную версию
  [*] ToDo - см. changelog.todo
 
-Текущая версия 33a16
+Текущая версия 33a17
 --------------------
 
-[$] Альянсы: Альянсы теперь могут покупать Наемников!
-    1. Каждый Альянс имеет собственный счет ТМ
-    2. Член Альянса может перевести ТМ на счет Альянса
-    3. ТМ со счета Альянса могут расходоваться только на нужды Альянса.  Нельзя
-       переводить ТМ на счет игрока
-    4. Владелец Альянса может покупать Наемников со счета Альянса
-    5. После достижения минимально необходимого количества (по умолчанию -  10,
-       задается в таблице `config`  записью  'ali_members_bonus')  каждый  член
-       Альянса получает бонус к своим Наемникам, равный уровню Наемника Альянса
-       деленного на количество членов Альянса, математически округленный
-    Примеры:
-    1. Альянс из 10 человек купил Наемника 4 уровня.
-        Бонус = round(10/4) = round(0,4) = 0
-    2. Альянс из 10 человек купил Наемника 7 уровня
-        Бонус = round(10/7) = round(0,7) = 1
-    Данный подход призван обеспечить достижение сразу нескольких целей:
+[$] Альянсы:  Альянсы  теперь  могут  рекуртировать  Наемников  и  исследовать
+    технологии!
+    1. Каждый Альянс имеет счет с ресурсами металл/кристалл/дейтрий/ТМ
+    2. Член Альянса может перевести ресурсы на счет Альянса. Сделать это  можно
+       на главной странице Альянса в разделе "Ресурсы Альянса".  Там  же  можно
+       увидеть состояние счета Альянса и бонусы, предоставляемые Альянсом  (см.
+       ниже)
+    3. Ресурсы со счета Альянса могут расходоваться только  на  нужды  Альянса.
+       Вывод ресурсов со счета Альянса невозможен
+    4. Владелец  Альянса  с  его  счета  может  исследовать  технологии    и  Рекрутировать
+       Наемников -  соответственно  пункты  "Технологии  Альянса"  и  "Наемники
+       Альянса" на странице управления Альянсом
+    5. После достижения минимально необходимого размера Альянса (по умолчанию -
+       10 человек, задается в  таблице  `config`  записью  'ali_members_bonus')
+       каждый член Альянса получает бонус к своим Наемникам и технологиям
+    6. Значение бонуса зависит от количества игроков в Альянсе и вычисляется по
+       формуле:
+         Бонус = round(уровень технологии или Наемника / количество игроков), 
+       где round() - операция математического округления. Примеры:
+       1. Альянс из 10 человек купил Технологию 4 уровня.
+           Бонус = round(4/10) = round(0,4) = 0
+       2. Альянс из 10 человек купил Технологию 7 уровня
+           Бонус = round(7/10) = round(0,7) = 1
+    7. Бонусы  от  Наемников  и  Технологий  так  же  действуют  при  проверки
+       требований  к  постройкам/исследованиям.  Например:  игрок   состоит   в
+       Альянсе, дающем бонус  +2  к  Лазерной  технологии,  а  его  собственный
+       уровень технологии равен 4. Эффективный уровень технологии этого  игрока
+       равен 6. Это  означает,  что  находясь  в  Альянсе  он  имеет  доступ  к
+       исследованию Ионной  технологии  (требуется  ЛТ  5-го  уровня)  и  может
+       строить Тяжелый Лазер (требуется ЛТ 6-го уровня). Очевидно, если  бы  он
+       не находился в Альянсе, эти постройки были бы заблокированы
+    Выбранная механика бонусов  Альянса  призван  обеспечить  достижение  сразу
+    нескольких целей:
     1. Исключить злоупотребление фишкой,  когда  2-3  игрока  формируют  Альянс
-    исключительно для получения бонусов
-    2. Активизировать межальянсную активность - чем больше игроков, тем  больше
-    ТМ
-    3. Усилить значение лояльности Альянсу - при выходе (или выгоне) из Альянса
-    игрок теряет все бонусы и, самое неприятное - все пожертвованные  в  Альянс
-    ТМ
-    4. Исключить появление мегаальянсов - чем  больше  игроков,  тем,  конешно,
-    больше ТМ они могут пожертвовать - но тем  меньше  бонусов  получит  каждый
-    отдельный игрок
+       исключительно для получения бонусов
+    2. Активизировать межальянсную активность: бонусы от ресусов Альянса  можно
+       получить только начиная с определенного количества участников. Ну и  чем
+       больше игроков в Альянсе, тем больше у него ресурсов
+    3. Усилить лояльность игроков к  Альянсу  -  при  выходе  (или  выгоне)  из
+       Альянса игрок теряет  все  бонусы  и  (самое  неприятное)  все  ресурсы,
+       пожертвованные  в Альянс
+    4. Исключить появление  мегаальянсов:  чем  больше  игроков  -  тем  больше
+       ресурсов они могут пожертвовать, но тем меньше  бонусов  получит  каждый
+       отдельный игрок
     5. Слабые игроки в сильных  Альянсах  получают  доступ  к  end-game  юнитам
-    (если,  конечно,  глава  Альянса  решит  потратить  ТМ  на  соответствующих
-    Наемников)
+       (если, конечно, глава Альянса  решит  потратить  ТМ  на  соответствующих
+       Наемников) и бонус в развитии
+    6. Сильные игроки смогут  поднять  эффективные  уровни  Технологий  даже  в
+       больших Альянсах. Например, если в Альянсе 15 человек, то исследовать 15
+       уровень технологии всем Альянсом будет  проще  и  дешевле,  чем  каждому
+       игроку отдельно
+    7. То же самое распространяется и на Наемников. При этом только Альянс дает
+       возможность получить эффективный уровень Наемников больше максимального
 
 [!] Наемники: Добавлена поддержка временных Наемников  (ВН).  Осталась  так  же
     поддержка постоянных Наемников (ПН). Тип Наемников выбирается в  настройках
@@ -188,6 +212,8 @@
 [%] Альянсы: Исправлена ошибка с неправильным отображением звания главы Альянса
 [%] Регистрация: Исправлена ошибка, когда игрок мог создать  аккаунт/планету  с
     пробелами в начале/в конце
+[%] Ракетная атака: Исправлена ошибка, из-за которой ракеты били в  десять  раз
+    слабее
 
 [@] $sn_data['groups']['prod'] => $sn_data['groups']['factories']
 [@] Аватары: Для корректной  работы  подсистемы  аватаров  в  PHP  должен  быть
